# discordlite-old

./: .clang-format  .gitignore  CMakeLists.txt  README.md  library.h  vcpkg.json
discord-bot/: CMakeLists.txt  main.cpp
discord-client/: CMakeLists.txt
discord-client/include/: client.h  library.h
discord-client/include/gateway/v10/events/: deserializable.h  deserialize.h  payload-data.h  serializable.h  serialize.h
discord-client/include/gateway/v10/events/receive/: hello.h
discord-client/include/gateway/v10/events/send/: identify.h
discord-client/include/networking/: socket.h
discord-client/src/: client.cpp  gateway.cpp  gateway.h  heartbeat.h  socket.cpp
discord-client/src/gateway/v10/events/: deserializable.h  gateway-event-payload.h  payload-data.h  serializable.h
discord-client/src/gateway/v10/events/models/: activity.h  presence.h  properties.h
discord-client/src/gateway/v10/events/receive/: hello.h
discord-client/src/gateway/v10/events/send/: identify.h
discord-client/src/networking/: payload.h  socket.cpp  socket.h
